[tool.poetry]
name = "slack-gpt"
version = "0.1.0"
description = ""
authors = ["Masato Naka <masatonaka1989@gmail.com>"]
readme = "README.md"
packages = [{include = "slack_gpt"}]

[tool.poetry.dependencies]
python = "^3.11"
slack-sdk = "^3.26.1"
gunicorn = "^22.0.0"
flask = "^3.0.0"
openai = "^1.4.0"
langchain = "^0.1.0"
langchain-community = "^0.0.36"
langchain-openai = "^0.1.0"
langchain-google-genai = "^1.0.3"
pillow = "^10.3.0"
langchain-cli = "^0.0.24"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
pytest = "^8.0.0"
pytest-env = "^1.1.3"
pytest-cov = "^5.0.0"
ruff = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--junitxml=pytest.xml --cov-report=term-missing --cov=slack_gpt tests/ -vvv -s"
env = [
    "ENV=test",
    "OPENAI_API_KEY=dummy",
    "OPENAI_ORGANIZATION=dummy",
    "SLACK_BOT_TOKEN=",
    "SIGNING_SECRET=SIGNING_SECRET",
    "DEDICATED_CHANNELS=C000000",
]

[tool.ruff]
line-length = 120
